# game_survival_drift_arena

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: linux.yml  osx.yml  windows.yml
assets/: credits.txt  engine_animation.ase  engine_icon.aseprite
assets/aseprite/: test1.ase
assets/shaders/: quad.frag  quad.vert  quad_textured.frag  quad_textured.vert  triangle.vert  triangle_colors.frag  triangle_colors.vert  vertex.glsl
assets/sprites/: car.ase
assets/tiled/: tiled_monkey_game_test.json  tiled_monkey_game_test.tmx  tilemap.tsx
cmake/: FindSDL2.cmake
src/: engine.h  main.cpp
src/engine/: CMakeLists.txt  camera.cpp  camera.h  constants.h  entity.h  game.cpp  game.h  input.h  log.cpp  log.h  scene.cpp  scene.h  shader.cpp  shader.h  structs.h  text.cpp  text.h  texture.cpp  texture.h  triangle.cpp  triangle.h  window.cpp  window.h
src/engine/assets/: assetsystem.cpp  assetsystem.h
src/engine/audio/: audiosystem.cpp  sound.cpp  sound.h
src/engine/debug/: debugmenu.cpp  debugmenu.h
src/engine/entity/: entity.cpp  entity.h
src/engine/graphics/: aseprite.cpp  aseprite.h  shader.cpp  texture.cpp  texture.h  tiled.cpp  tiled.h
src/engine/input/: input.cpp  input.h
src/engine/learning/: quad.cpp  quad.h  quad_textured.cpp  quad_textured.h  triangle.cpp  triangle.h  triangle_colors.cpp  triangle_colors.h
src/engine/logging/: log.cpp  log.h
src/engine/maths/: vector2.cpp  vector2.h
src/engine/scenes/: introscene.cpp  introscene.h  scene.cpp  scene.h  scenesystem.cpp  scenesystem.h
src/engine/sound/: audiosystem.cpp  audiosystem.h
src/engine/text/: text.cpp  text.h
src/game/: game.cpp  game.h
src/games/pong/: CMakeLists.txt  pong.cpp  pong.h
src/games/pong/assets/sprites/: mockup.ase
src/games/pong/code/: ball.cpp  ball.h  paddle.cpp  paddle.h
src/games/pong/code/scenes/: playscene.cpp  playscene.h
